# cognify

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.production  README.md  alembic.ini  deploy-production.sh  docker-compose.yml  pyproject.toml  requirements-prod.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: auth_middleware.py  cache.py  config.py  database.py  exceptions.py  logging.py  service_manager.py
app/models/: __init__.py  analytics.py  base.py  collections.py  documents.py  queries.py  shared_content.py  users.py
docs/: README.md
docs/deployment/: database-setup.md  production-deployment.md
examples/: README.md  chunking_examples.py  comprehensive_test_content.py
infrastructure/: README.md
infrastructure/docker/: nginx-production.conf  prometheus-production.yml  prometheus.yml
infrastructure/kubernetes/: deployment.yaml  service.yaml
migrations/: README.md
scripts/: cleanup-migrations.sh  deploy-production-final.sh  deploy-production.sh  deploy-staging.sh  deploy_production.sh  full-reset.sh  init-complete-db.sql  init-db.sql  init-production-db.sql  init-test-db.sql  migrate_settings_to_db.py  production_init.py  reset-database.sh  run_all_tests.py  scan_secrets.py  setup_database.py  setup_environment.py  start-development.sh  test-init-db.sql  test_agentic_chunking.py  test_basic.py  test_real_llm.py
scripts/debug/: debug_token_refresh.py  debug_user_lookup.py
scripts/manual_tests/: test_advanced_features.py  test_agentic_chunking.py  test_all_endpoints.py  test_api_complete.py  test_api_with_token.py  test_chunk_type_fix.py  test_complete_api.py  test_complete_api_final.py  test_comprehensive.py  test_detailed_errors.py  (+6 more)
tests/: conftest.py  conftest_complex.py  test_agent_integration.py  test_api_integration.py  test_app.py  test_auth_endpoints.py  test_chunking_endpoints.py  test_collections_endpoints.py  test_config.py  test_database_integration.py  test_documents_endpoints.py  test_error_handling.py  test_performance.py  test_production.py  test_query_endpoints.py  test_real_llm_integration.py  test_simple_database.py  test_simple_integration.py  test_system_endpoints.py  test_vector_db_integration.py
(+130 files in other folders)
